# KairosConsole

./: .gitignore  CMakeLists.txt  KairosConsole.cbp  KairosQt.pro  main.cpp
KairosQt/design/: LoginDialog.ui  logindialog.ui  mainwindow.ui  myprofilewidget.ui
KairosQt/design/App/: PreferenceWidget.ui  myprofilewidget.ui
KairosQt/design/AvailableType/: AvailableTypeForm.ui  AvailableTypeListingWidget.ui
KairosQt/design/Holiday/: HolidayBatchForm.ui  HolidayForm.ui  HolidayListingWidget.ui  HolidayRowForm.ui
KairosQt/design/Role/: RoleForm.ui  RoleListingWidget.ui
KairosQt/design/User/: UserListingWidget.ui
KairosQt/design/app/: PreferenceWidget.ui
KairosQt/design/security/: logindialog.ui
KairosQt/include/: PreferenceWidget.h  logindialog.h  mainwindow.h  myprofilewidget.h
KairosQt/include/App/: PreferenceWidget.h
KairosQt/include/AvailableType/: AvailableTypeForm.h  AvailableTypeListingWidget.h
KairosQt/include/Holiday/: HolidayBatchForm.h  HolidayForm.h  HolidayListingWidget.h  HolidayRowForm.h
KairosQt/include/Role/: RoleForm.h  RoleListingWidget.h
KairosQt/include/Security/: logindialog.h
KairosQt/include/User/: UserListingWidget.h
KairosQt/src/: PreferenceWidget.cpp  logindialog.cpp  mainwindow.cpp  myprofilewidget.cpp
KairosQt/src/App/: PreferenceWidget.cpp  myprofilewidget.cpp
KairosQt/src/AvailableType/: AvailableTypeForm.cpp  AvailableTypeListingWidget.cpp
KairosQt/src/Holiday/: HolidayBatchForm.cpp  HolidayForm.cpp  HolidayListingWidget.cpp  HolidayRowForm.cpp
KairosQt/src/Role/: RoleForm.cpp  RoleListingWidget.cpp
KairosQt/src/Security/: logindialog.cpp
include/: BaseSecurityDto.h
include/App/: CountryCode.h  Displaylanguage.h  Session.h  UserRole.h  UserStatus.h
include/Dto/: BaseDto.h
include/Model/: AvailableTypeModel.h  HolidayModel.h  RoleModel.h  UserModel.h
include/Network/: ApiHandler.h  HTTPConstants.h
include/Response/: BaseResponse.h
src/: BaseSecurityDto.cpp
src/App/: DisplayLanguage.cpp  Session.cpp  UserRole.cpp  UserStatus.cpp
src/Dto/: BaseDto.cpp
src/Model/: AvailableTypeModel.cpp  HolidayModel.cpp  RoleModel.cpp  UserModel.cpp
src/Network/: ApiHandler.cpp
src/Response/: BaseResponse.cpp
translation/: main.en.ts  main.fr.ts  main.vi.ts
(+34 files in other folders)
